fix minor mistake

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <name>Harman Singh</name>
               </p>
               <p>I am an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a>.
-                Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>
-                During this time, I have been a intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
+                Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
+                During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
                 a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
 
               </p>
