--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a>.
+              <p>I am a researcher at Google, working on large scale multimodal and multilingual in the NLU team under <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a>. Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a>.
                 Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
                 During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
                 a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
@@ -45,7 +45,7 @@
             
           <tr height="300px">
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/MosaiCLIP.png" alt="MosaiCLIP" width="400" >
+              <img src="images/MosaiCLIP.png" alt="MosaiCLIP" width="350" >
             </td>
             <td width="75%" valign="middle">
               <a href="https://arxiv.org/abs/2305.13812">
@@ -54,7 +54,7 @@
               <br>
               <strong>Harman Singh</strong>, <a href="">Pengchuan Zhang</a>, <a href="">Qifan Wang</a>, <a href="">Mengjiao Wang</a>, <a href="">Wenhan Xiong</a>, <a href="">Jingfei Du</a>, <a href="">Yu Chen</a>
               <br>
-              <em>EMNLP 2023 (long paper, main conference)</em>, 2022
+              <em>EMNLP 2023 (long paper, main conference)</em>
               <br>
               <p>Improving compositional reasoning capabilities of SOTA Vision Language Models through coarse-to-fine contrastive learning and effective hard negative mining techniques.</p>
             </td>
@@ -71,7 +71,7 @@
               <br>
               <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Arnab Kumar</a> Mondal, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
               <br>
-              <em>EMNLP 2023 (long paper, main conference)</em>, 2022
+              <em>EMNLP 2023 (long paper, main conference)</em>
               <br>
               <p>Datasets and new methods for multi-hop instruction guided image manipulations.</p>
             </td>
