--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/"></a>a>Google Research, working on large scale multimodal and multilingual with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a>.
+              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/"></a>a>Google Research, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a>.
                 Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
                 During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
                 a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
