--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/"></a>a>Google Research, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a>.
+              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/"></a>a>Google Research, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. 
+              </p>
+              <p>Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a> where I worked on reasoning abilities of Vision Language Models.
                 Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
                 During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
                 a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
-
-              </p>
+              </p> 
               <p style="text-align:center">
                 <a href="mailto:harmansingh.iitd@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/harman_cv.pdf">CV</a> &nbsp/&nbsp
@@ -45,7 +46,7 @@
             
           <tr height="300px">
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/MosaiCLIP.png" alt="MosaiCLIP" width="350" >
+              <img src="images/MosaiCLIP.png" alt="MosaiCLIP" width="300" >
             </td>
             <td width="75%" valign="middle">
               <a href="https://arxiv.org/abs/2305.13812">
