--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
               Teaching Assitant for Intro. to EE (Dr. Anuj Dhawan, Fall 2021)
             </td>
           </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              Demo Leader, NeurIPS Education Outreach Program (for 240+ high school students), NeurIPS 2022
+            </td>
+          </tr>
         </tbody></table>
         <small><center>Template by <a href="https://github.com/jonbarron/website">Jon Barron</a></center></small>
       </td>
