--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/"></a>a>Google Research, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. 
+              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/">Google Research</a>, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. 
               </p>
               <p>Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a> where I worked on reasoning abilities of Vision Language Models.
                 Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
