--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               <br>
               <em>EMNLP 2023 (long paper, main conference)</em>
               <br>
+              <br>
+              <em><span style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</span></em>
+              <br>
               <p>Improving compositional reasoning capabilities of SOTA Vision Language Models through coarse-to-fine contrastive learning and effective hard negative mining techniques.</p>
             </td>
           </tr>
@@ -70,7 +73,7 @@
                 <papertitle>Image Manipulation via Multi-Hop Instructions -- A New Dataset and Weakly-Supervised Neuro-Symbolic Approach</papertitle>
               </a>
               <br>
-              <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Arnab Kumar</a> Mondal, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
+              <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
               <br>
               <em>EMNLP 2023 (long paper, main conference)</em>
               <br>
@@ -83,7 +86,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              Reviewer for NeurIPS 2023, EMNLP 2023, MLRC 2022 (Outstanding Reviewer Award)
+              Reviewer for NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>
             </td>
           </tr>
           <tr>
@@ -102,7 +105,7 @@
             </td>
           </tr>
         </tbody></table>
-        <small><center>Template by <a href="https://github.com/jonbarron/website">Jon Barron</a></center></small>
+        <small><center>Website template by <a href="https://github.com/jonbarron/website">Jon Barron</a></center></small>
       </td>
 
     
