--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <br>
               <em><span style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</span></em>
               <br>
-              <p>Improving compositional reasoning capabilities of SOTA Vision Language Models through coarse-to-fine contrastive learning and effective hard negative mining techniques.</p>
+              <p>Improving compositional reasoning capabilities of SOTA Vision-Language Models through a new Coarse-to-Fine contrastive learning technique as well as effective hard negative mining.</p>
             </td>
           </tr>
 
@@ -78,6 +78,23 @@
               <em>EMNLP 2023 (long paper, main conference)</em>
               <br>
               <p>Datasets and new methods for multi-hop instruction guided image manipulations.</p>
+            </td>
+          </tr>
+
+          <tr height="300px">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/fairr.png" alt="fairr" width="300" >
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://aclanthology.org/2022.acl-long.77/">
+                <papertitle>FaiRR: Faithful and Robust Deductive Reasoning over Natural Language</papertitle>
+              </a>
+              <br>
+              <a href="">Soumya Sanyal</a>, <strong>Harman Singh</strong>, <a href="">Xiang Ren</a>
+              <br>
+              <em>ACL 2022 (long paper, main conference)</em>
+              <br>
+              <p>Proposed a modular method (FaiRR) for logical reasoning over natural language rule bases. Our methods insure ensure model faithfulness by assured causal relation from the proof step to the inference reasoning. FaiRR is more interpretable, efficient as compared to baselines, and generalizes better to OOD logical reasoning tasks.</p>
             </td>
           </tr>
 
