--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
               <br>
               <strong>Harman Singh</strong>, <a href="">Pengchuan Zhang</a>, <a href="">Qifan Wang</a>, <a href="">Mengjiao Wang</a>, <a href="">Wenhan Xiong</a>, <a href="">Jingfei Du</a>, <a href="">Yu Chen</a>
               <br>
-              <em>EMNLP 2023 (long paper, main conference)</em>
+              <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
               <br>
               <br>
-              <em><span style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</span></em>
+              <em style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</em>
               <br>
               <p>Improving compositional reasoning capabilities of SOTA Vision-Language Models through a new Coarse-to-Fine contrastive learning technique as well as effective hard negative mining.</p>
             </td>
@@ -75,7 +75,7 @@
               <br>
               <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
               <br>
-              <em>EMNLP 2023 (long paper, main conference)</em>
+              <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
               <br>
               <p>Datasets and new methods for multi-hop instruction guided image manipulations.</p>
             </td>
@@ -92,7 +92,7 @@
               <br>
               <a href="">Soumya Sanyal</a>, <strong>Harman Singh</strong>, <a href="">Xiang Ren</a>
               <br>
-              <em>ACL 2022 (long paper, main conference)</em>
+              <em><strong>ACL 2022 (long paper, main conference)</strong></em>
               <br>
               <p>Proposed a modular method (FaiRR) for logical reasoning over natural language rule bases. Our methods insure ensure model faithfulness by assured causal relation from the proof step to the inference reasoning. FaiRR is more interpretable, efficient as compared to baselines, and generalizes better to OOD logical reasoning tasks.</p>
             </td>
