old bioinformatics work

--- a/index.html
+++ b/index.html
@@ -125,6 +125,51 @@
         <small><center>Website template by <a href="https://github.com/jonbarron/website">Jon Barron</a></center></small>
       </td>
 
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- Title Row -->
+        <tr>
+          <td colspan="2" align="center">
+            <h2>Past Work (Bioinformatics Research)</h2>
+          </td>
+        </tr>
+
+        <tr height="300px">
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <img src="images/covid-paper-nature-image.png" alt="covid-paper-nature-image" width="300" >
+          </td>
+          <td width="75%" valign="middle">
+            <a href="https://www.nature.com/articles/s41592-022-01444-z">
+              <papertitle>Unlocking capacities of genomics for the COVID-19 response and future pandemics</papertitle>
+            </a>
+            <br>
+            <a href="">Sergey Knyazev</a>, <a href="">Karishma Chhugan</a>, <strong>Harman Singh*</strong>, <a href="">Varuni Sarwal*</a>, <a href="">Ram Ayyala*</a>, ..., <a href="">Serghei Mangul</a>
+            <br>
+            <em><strong>Nature Methods</strong></em>
+            <br>
+            <!-- <p>Improving compositional reasoning capabilities of SOTA Vision-Language Models through a new Coarse-to-Fine contrastive learning technique as well as effective hard negative mining.</p> -->
+          </td>
+        </tr>
+
+        <tr height="300px">
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <img src="images/e-MSN-isbra.png" alt="e-MSN-isbra" width="300" >
+          </td>
+          <td width="75%" valign="middle">
+            <a href="https://dl.acm.org/doi/abs/10.1007/978-3-030-91415-8_15">
+              <papertitle>A Novel Network Representation of SARS-CoV-2 Sequencing Datas</papertitle>
+            </a>
+            <br>
+            <a href="">Sergey Knyazev</a>, <a href="">Daniel Novikov</a>, <a href="">Mark Grinshpon</a>, <strong>Harman Singh</a>strong>, ..., <a href="">Serghei Mangul</a>
+            <br>
+            <em><strong>International Symposium on Bioinformatics Research and Applications 2021</strong></em>
+            <br>
+            <!-- <p>Improving compositional reasoning capabilities of SOTA Vision-Language Models through a new Coarse-to-Fine contrastive learning technique as well as effective hard negative mining.</p> -->
+          </td>
+        </tr>
+      </tbody></table>
+
+
+
     
     </tr>
   </table>
