--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <papertitle>A Novel Network Representation of SARS-CoV-2 Sequencing Datas</papertitle>
               </a>
               <br>
-              <a href="">Sergey Knyazev</a>, <a href="">Daniel Novikov</a>, <a href="">Mark Grinshpon</a>, <strong>Harman Singh</a>strong>, ..., <a href="">Serghei Mangul</a>
+              <a href="">Sergey Knyazev</a>, <a href="">Daniel Novikov</a>, <a href="">Mark Grinshpon</a>, <strong>Harman Singh</strong>, ..., <a href="">Serghei Mangul</a>
               <br>
               <em><strong>International Symposium on Bioinformatics Research and Applications 2021</strong></em>
               <br>
@@ -142,7 +142,7 @@
             </td>
           </tr>
         </tbody></table>
-        
+
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
