--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <!-- <link rel="icon" type="image/png" href="images/seal_icon.png"> -->
 </head>
 
 <body>
@@ -55,9 +54,8 @@
               <br>
               <strong>Harman Singh</strong>, <a href="">Pengchuan Zhang</a>, <a href="">Qifan Wang</a>, <a href="">Mengjiao Wang</a>, <a href="">Wenhan Xiong</a>, <a href="">Jingfei Du</a>, <a href="">Yu Chen</a>
               <br>
+              <br>
               <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
-              <br>
-              <br>
               <em style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</em>
               <br>
               <p>Improving compositional reasoning capabilities of SOTA Vision-Language Models through a new Coarse-to-Fine contrastive learning technique as well as effective hard negative mining.</p>
@@ -72,6 +70,7 @@
               <a href="https://arxiv.org/abs/2305.14410">
                 <papertitle>Image Manipulation via Multi-Hop Instructions -- A New Dataset and Weakly-Supervised Neuro-Symbolic Approach</papertitle>
               </a>
+              <br>
               <br>
               <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
               <br>
@@ -92,9 +91,10 @@
               <br>
               <a href="">Soumya Sanyal</a>, <strong>Harman Singh</strong>, <a href="">Xiang Ren</a>
               <br>
+              <br>
               <em><strong>ACL 2022 (long paper, main conference)</strong></em>
               <br>
-              <p>Proposed a modular method (FaiRR) for logical reasoning over natural language rule bases. Our methods insure ensure model faithfulness by assured causal relation from the proof step to the inference reasoning. FaiRR is more interpretable, efficient as compared to baselines, and generalizes better to OOD logical reasoning tasks.</p>
+              <p>Proposed a modular method (FaiRR) for logical reasoning over natural language rule bases. Our methods ensure model faithfulness by assured causal relation from the proof step to the inference reasoning. FaiRR is more interpretable, efficient as compared to baselines, and generalizes better to OOD logical reasoning tasks.</p>
             </td>
           </tr>
 
