--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
           <tr height="300px">
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/MosaiCLIP.png" alt="MosaiCLIP" width="300" >
+              <img src="images/MosaiCLIP_2.png" alt="MosaiCLIP" width="300" >
             </td>
             <td width="75%" valign="middle">
               <a href="https://arxiv.org/abs/2305.13812">
