--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <p style="text-align:center">
                 <a href="mailto:harmansingh.iitd@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/harman_cv.pdf">CV</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=BanlVLYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.semanticscholar.org/author/Harman-Singh/2119151340">Semantic Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Harman26Singh">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/HarmanDotpy/">Github</a>
