--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <papertitle>Image Manipulation via Multi-Hop Instructions -- A New Dataset and Weakly-Supervised Neuro-Symbolic Approach</papertitle>
               </a>
               <br>
-              <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
+              <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Ashish Goswami</a>, <a href="">Satyam Modi</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
               <br>
               <br>
               <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
