update paper desc

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <br>
               <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
               <br>
-              <p>New datasets and a modular method for multi-hop instruction guided image manipulations.</p>
+              <p>New datasets and a modular method for weakly-supervised instruction guided image manipulations.</p>
             </td>
           </tr>
 
