--- a/index.html
+++ b/index.html
@@ -43,7 +43,26 @@
   
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            
+
+          <tr height="300px">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/IndicGenBench.png" alt="IndicGenBench" width="300" >
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://arxiv.org/abs/2404.16816">
+                <papertitle>IndicGenBench: A Multilingual Benchmark to Evaluate Generation Capabilities of LLMs on Indic Languages</papertitle>
+              </a>
+              <br>
+              <strong>Harman Singh</strong>, <a href="">Nitish Gupta</a>, <a href="">Shikhar Bharadwaj</a>, <a href="">Dinesh Tewari</a>, <a href="">Partha Talukdar</a>
+              <br>
+              <br>
+              <em><strong>Under Review, 2024</strong></em>
+              <br>
+              dataset link: <a href="https://github.com/google-research-datasets/indic-gen-bench">https://github.com/google-research-datasets/indic-gen-bench</a>
+              <p>IndicGenBench is a multilingual, multi-way parallel benchmark for measuring language generation capabilities across diverse user-facing tasks in 29 Indic languages spanning 13 writing scripts and 4 language families.</p>
+            </td>
+          </tr>
+
           <tr height="300px">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/MosaiCLIP_2.png" alt="MosaiCLIP" width="300" >
@@ -148,7 +167,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              Reviewer for ICLR 2023, NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>
+              Reviewer for ICLR 2023, NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>, COLM 2024, ACL Rolling Review (ARR) 2024
             </td>
           </tr>
           <tr>
