--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/">Google Research</a>, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the NLU team. 
+              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/">Google DeepMind</a>, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the Languages team. 
               </p>
               <p>Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a> where I worked on reasoning abilities of Vision Language Models.
                 Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
@@ -167,7 +167,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              Reviewer for ICLR 2023, NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>, COLM 2024, ACL Rolling Review (ARR) 2024
+              Reviewer for ICLR 2023, NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>, COLM 2024, ACL Rolling Review (ARR) 2024 (Feb, April, June)
             </td>
           </tr>
           <tr>
