--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <strong>Harman Singh</strong>, <a href="">Nitish Gupta</a>, <a href="">Shikhar Bharadwaj</a>, <a href="">Dinesh Tewari</a>, <a href="">Partha Talukdar</a>
               <br>
               <br>
-              <em><strong>Under Review, 2024</strong></em>
+              <em><strong>ACL 2024 (long paper, main conference)</strong></em>
               <br>
               dataset link: <a href="https://github.com/google-research-datasets/indic-gen-bench">https://github.com/google-research-datasets/indic-gen-bench</a>
               <p>IndicGenBench is a multilingual, multi-way parallel benchmark for measuring language generation capabilities across diverse user-facing tasks in 29 Indic languages spanning 13 writing scripts and 4 language families.</p>
