--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
               <strong>Harman Singh</strong>, <a href="">Nitish Gupta</a>, <a href="">Shikhar Bharadwaj</a>, <a href="">Dinesh Tewari</a>, <a href="">Partha Talukdar</a>
               <br>
               <br>
-              <em><strong>ACL 2024 (long paper, main conference)</strong></em>
+              <strong>ACL 2024 (long paper, main conference)</strong>
               <br>
-              dataset link: <a href="https://github.com/google-research-datasets/indic-gen-bench">https://github.com/google-research-datasets/indic-gen-bench</a>
+              Dataset Links: <a href="https://github.com/google-research-datasets/indic-gen-bench">Github</a> |  <a href="https://huggingface.co/collections/google/indicgenbench-663185166ea914038209b723">HuggingFace</a>
               <p>IndicGenBench is a multilingual, multi-way parallel benchmark for measuring language generation capabilities across diverse user-facing tasks in 29 Indic languages spanning 13 writing scripts and 4 language families.</p>
             </td>
           </tr>
@@ -75,7 +75,7 @@
               <strong>Harman Singh</strong>, <a href="">Pengchuan Zhang</a>, <a href="">Qifan Wang</a>, <a href="">Mengjiao Wang</a>, <a href="">Wenhan Xiong</a>, <a href="">Jingfei Du</a>, <a href="">Yu Chen</a>
               <br>
               <br>
-              <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
+              <strong>EMNLP 2023 (long paper, main conference)</strong>
               <br>
               <em style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</em>
               <br>
@@ -95,7 +95,7 @@
               <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Ashish Goswami</a>, <a href="">Satyam Modi</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
               <br>
               <br>
-              <em><strong>EMNLP 2023 (long paper, main conference)</strong></em>
+              <strong>EMNLP 2023 (long paper, main conference)</strong>
               <br>
               <p>New datasets and a modular method for weakly-supervised instruction guided image manipulations.</p>
             </td>
@@ -113,7 +113,7 @@
               <a href="">Soumya Sanyal</a>, <strong>Harman Singh</strong>, <a href="">Xiang Ren</a>
               <br>
               <br>
-              <em><strong>ACL 2022 (long paper, main conference)</strong></em>
+              <strong>ACL 2022 (long paper, main conference)</strong>
               <br>
               <p>Proposed a modular method (FaiRR) for logical reasoning over natural language rule bases. Our methods ensure model faithfulness by assured causal relation from the proof step to the inference reasoning. FaiRR is more interpretable, efficient as compared to baselines, and generalizes better to OOD logical reasoning tasks.</p>
             </td>
