--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
               <br>
               <em style="color: red;">Oral acceptance to <a href="https://iccv-clvl.github.io/2023/">CLVL Workshop</a> at ICCV 2023</em>
               <br>
+              <em style="color: red;">Oral acceptance to <a href="https://splu-robonlp-2023.github.io/">SpLU-RoboNLP Workshop</a> at EMNLP 2023</em>
+              <br>
               <p>Improving compositional reasoning capabilities of SOTA Vision-Language Models through a new Coarse-to-Fine contrastive learning technique as well as effective hard negative mining.</p>
             </td>
           </tr>
