--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/harman_cookie.jpg"><img style="width:65%;max-width:65%" alt="profile photo" src="images/harman_cookie.jpg" onclick="return false;"></a>
+              <a href="images/harman_cookie.jpg"><img style="width:80%;max-width:80%" alt="profile photo" src="images/harman_cookie.jpg" onclick="return false;"></a>
             </td>
           </tr>
         </tbody></table>
@@ -45,8 +45,8 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
           <tr height="300px">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/IndicGenBench.png" alt="IndicGenBench" width="300" >
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/IndicGenBench.png" alt="IndicGenBench" width="100%" >
             </td>
             <td width="100%" valign="middle">
               <a href="https://arxiv.org/abs/2404.16816">
@@ -64,8 +64,8 @@
           </tr>
 
           <tr height="300px">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/MosaiCLIP_2.png" alt="MosaiCLIP" width="300" >
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/MosaiCLIP_2.png" alt="MosaiCLIP" width="100%" >
             </td>
             <td width="100%" valign="middle">
               <a href="https://arxiv.org/abs/2305.13812">
@@ -86,8 +86,8 @@
           </tr>
 
           <tr height="300px">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/NeuroSIM.png" alt="NeuroSIM" width="300" >
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/NeuroSIM.png" alt="NeuroSIM" width="100%" >
             </td>
             <td width="100%" valign="middle">
               <a href="https://arxiv.org/abs/2305.14410">
@@ -104,8 +104,8 @@
           </tr>
 
           <tr height="300px">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/fairr.png" alt="fairr" width="300" >
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/fairr.png" alt="fairr" width="100%" >
             </td>
             <td width="100%" valign="middle">
               <a href="https://aclanthology.org/2022.acl-long.77/">
@@ -132,8 +132,8 @@
           </tr>
 
           <tr height="300px">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/covid-paper-nature-image.png" alt="covid-paper-nature-image" width="300" >
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/covid-paper-nature-image.png" alt="covid-paper-nature-image" width="100%" >
             </td>
             <td width="100%" valign="middle">
               <a href="https://www.nature.com/articles/s41592-022-01444-z">
@@ -149,8 +149,8 @@
           </tr>
 
           <tr height="300px">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/e-MSN-isbra.png" alt="e-MSN-isbra" width="300" >
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/e-MSN-isbra.png" alt="e-MSN-isbra" width="100%" >
             </td>
             <td width="100%" valign="middle">
               <a href="https://dl.acm.org/doi/abs/10.1007/978-3-030-91415-8_15">
@@ -168,22 +168,22 @@
 
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:35%;vertical-align:middle">
               Reviewer for ICLR 2023, NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>, COLM 2024, ACL Rolling Review (ARR) 2024 (Feb, April, June)
             </td>
           </tr>
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:35%;vertical-align:middle">
               Teaching Assitant for Machine Learning (Dr. Sumeet Agarwal and Dr. Jayadeva, Fall 2021)
             </td>
           </tr>
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:35%;vertical-align:middle">
               Teaching Assitant for Intro. to EE (Dr. Anuj Dhawan, Fall 2021)
             </td>
           </tr>
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:35%;vertical-align:middle">
               Demo Leader, NeurIPS Education Outreach Program (for 240+ high school students), NeurIPS 2022
             </td>
           </tr>
