--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <papertitle>IndicGenBench: A Multilingual Benchmark to Evaluate Generation Capabilities of LLMs on Indic Languages</papertitle>
               </a>
               <br>
-              <strong>Harman Singh</strong>, <a href="">Nitish Gupta</a>, <a href="">Shikhar Bharadwaj</a>, <a href="">Dinesh Tewari</a>, <a href="">Partha Talukdar</a>
+              <strong>Harman Singh</strong>, Nitish Gupta, Shikhar Bharadwaj, Dinesh Tewari, Partha Talukdar</a>
               <br>
               <br>
               <strong>ACL 2024 (long paper, main conference)</strong>
@@ -72,7 +72,7 @@
                 <papertitle>Coarse-to-Fine Contrastive Learning in Image-Text-Graph Space for Improved Vision-Language Compositionality</papertitle>
               </a>
               <br>
-              <strong>Harman Singh</strong>, <a href="">Pengchuan Zhang</a>, <a href="">Qifan Wang</a>, <a href="">Mengjiao Wang</a>, <a href="">Wenhan Xiong</a>, <a href="">Jingfei Du</a>, <a href="">Yu Chen</a>
+              <strong>Harman Singh</strong>, Pengchuan Zhang, Qifan Wang, Mengjiao Wang, Wenhan Xiong, Jingfei Du, Yu Chen</a>
               <br>
               <br>
               <strong>EMNLP 2023 (long paper, main conference)</strong>
@@ -87,6 +87,42 @@
 
           <tr height="300px">
             <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/multi-hop-ke.png" alt="Multi-Hop-KE" width="100%" >
+            </td>
+            <td width="100%" valign="middle">
+              <a href="https://arxiv.org/abs/2407.10275">
+                <papertitle>Cross-Lingual Multi-Hop Knowledge Editing</papertitle>
+              </a>
+              <br>
+              Aditi Khandelwal*, <strong>Harman Singh*</strong>, Hengrui Gu, Tianlong Chen, Kaixiong Zhou</a> [*Equal Contribution]
+              <br>
+              <br>
+              <strong>Under Review</strong>
+              <br>
+              <p>Benchmarking and improving retrieval augmented knoweledge editing of LLMs, in a cross-lingual and multi-hop setting.</p>
+            </td>
+          </tr>
+
+          <tr height="300px">
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/STAB.png" alt="STAB" width="100%" >
+            </td>
+            <td width="100%" valign="middle">
+              <a href="https://arxiv.org/abs/2409.02384">
+                <papertitle>STAB: Speech Tokenizer Assessment Benchmark</papertitle>
+              </a>
+              <br>
+              Shikhar Vashisht*, <strong>Harman Singh*</strong>, Shikhar Bharadwaj*, Sriram Ganapathy, Chulayuth Asawaroengchai, Kartik Audhkhasi, Andrew Rosenberg, Ankur Bapna, Bhuvana Ramabhadran</a> [*Equal Contribution]
+              <br>
+              <br>
+              <strong>Under Review</strong>
+              <br>
+              <p>A systematic evaluation framework designed to assess speech tokenizers comprehensively and shed light on their inherent characteristics, cheaply, without having to train large speech foundation models.</p>
+            </td>
+          </tr>
+
+          <tr height="300px">
+            <td style="padding:20px;width:35%;vertical-align:middle">
               <img src="images/NeuroSIM.png" alt="NeuroSIM" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -94,7 +130,7 @@
                 <papertitle>Image Manipulation via Multi-Hop Instructions -- A New Dataset and Weakly-Supervised Neuro-Symbolic Approach</papertitle>
               </a>
               <br>
-              <strong>Harman Singh</strong>, <a href="">Poorva Garg</a>, <a href="">Mohit Gupta</a>, <a href="">Kevin Shah</a>, <a href="">Ashish Goswami</a>, <a href="">Satyam Modi</a>, <a href="">Arnab Kumar Mondal</a>, <a href="">Dinesh Khandelwal</a>, <a href="">Parag Singla</a>, <a href="">Dinesh Garg</a>
+              <strong>Harman Singh</strong>, Poorva Garg, Mohit Gupta, Kevin Shah, Ashish Goswami, Satyam Modi, Arnab Kumar Mondal, Dinesh Khandelwal, Parag Singla, Dinesh Garg</a>
               <br>
               <br>
               <strong>EMNLP 2023 (long paper, main conference)</strong>
@@ -112,7 +148,7 @@
                 <papertitle>FaiRR: Faithful and Robust Deductive Reasoning over Natural Language</papertitle>
               </a>
               <br>
-              <a href="">Soumya Sanyal</a>, <strong>Harman Singh</strong>, <a href="">Xiang Ren</a>
+              Soumya Sanyal, <strong>Harman Singh</strong>, Xiang Ren</a>
               <br>
               <br>
               <strong>ACL 2022 (long paper, main conference)</strong>
@@ -140,7 +176,7 @@
                 <papertitle>Unlocking capacities of genomics for the COVID-19 response and future pandemics</papertitle>
               </a>
               <br>
-              <a href="">Sergey Knyazev</a>, <a href="">Karishma Chhugan</a>, <strong>Harman Singh*</strong>, <a href="">Varuni Sarwal*</a>, <a href="">Ram Ayyala*</a>, ..., <a href="">Serghei Mangul</a>
+              Sergey Knyazev, Karishma Chhugan, <strong>Harman Singh*</strong>, Varuni Sarwal*, Ram Ayyala*, ..., Serghei Mangul</a>
               <br>
               <em><strong>Nature Methods</strong></em>
               <br>
@@ -157,7 +193,7 @@
                 <papertitle>A Novel Network Representation of SARS-CoV-2 Sequencing Datas</papertitle>
               </a>
               <br>
-              <a href="">Sergey Knyazev</a>, <a href="">Daniel Novikov</a>, <a href="">Mark Grinshpon</a>, <strong>Harman Singh</strong>, ..., <a href="">Serghei Mangul</a>
+              Sergey Knyazev, Daniel Novikov, Mark Grinshpon, <strong>Harman Singh</strong>, ..., Serghei Mangul</a>
               <br>
               <em><strong>International Symposium on Bioinformatics Research and Applications 2021</strong></em>
               <br>
