--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
                 a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
               </p> 
+              <p style="color: red;">
+                <strong>I am looking for PhD positions starting Fall 25'</strong>
+              </p> 
               <p style="text-align:center">
                 <a href="mailto:harmansingh.iitd@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/harman_cv.pdf">CV</a> &nbsp/&nbsp
@@ -40,7 +43,6 @@
             </td>
           </tr>
         </tbody></table>
-  
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
