--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
                 During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
                 a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
               </p> 
-              <p style="color: red;">
-                <strong>I am looking for PhD positions starting Fall 25'</strong>
-              </p> 
               <p style="text-align:center">
                 <a href="mailto:harmansingh.iitd@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/harman_cv.pdf">CV</a> &nbsp/&nbsp
@@ -40,6 +37,20 @@
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
               <a href="images/harman_cookie.jpg"><img style="width:80%;max-width:80%" alt="profile photo" src="images/harman_cookie.jpg" onclick="return false;"></a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>Research</h2>
+              <p>
+                I am interested in language modeling, long-context capabilities of LLMs and multimodal LMs, reasoning, and post-training. Along with this, I am interested in building inclusive language technologies that can benefit a broader audience.
+              </p>
+              <p style="color: red;">
+                <strong>I am looking for PhD positions starting Fall 25'</strong>
+              </p> 
             </td>
           </tr>
         </tbody></table>
