--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 I am interested in language modeling, long-context capabilities of LLMs and multimodal LMs, reasoning, and post-training. Along with this, I am interested in building inclusive language technologies that can benefit a broader audience.
               </p>
               <p style="color: red;">
-                <strong>I am looking for PhD positions starting Fall 25'</strong>
+                <strong>I am looking for PhD positions starting Fall 2025</strong>
               </p> 
             </td>
           </tr>
