--- a/index.html
+++ b/index.html
@@ -110,27 +110,9 @@
               Aditi Khandelwal*, <strong>Harman Singh*</strong>, Hengrui Gu, Tianlong Chen, Kaixiong Zhou</a> [*Equal Contribution]
               <br>
               <br>
-              <strong>Under Review</strong>
+              <strong>EMNLP 2024 (long paper, findings)</strong>
               <br>
               <p>Benchmarking and improving retrieval augmented knoweledge editing of LLMs, in a cross-lingual and multi-hop setting.</p>
-            </td>
-          </tr>
-
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
-              <img src="images/STAB.png" alt="STAB" width="100%" >
-            </td>
-            <td width="100%" valign="middle">
-              <a href="https://arxiv.org/abs/2409.02384">
-                <papertitle>STAB: Speech Tokenizer Assessment Benchmark</papertitle>
-              </a>
-              <br>
-              Shikhar Vashisht*, <strong>Harman Singh*</strong>, Shikhar Bharadwaj*, Sriram Ganapathy, Chulayuth Asawaroengchai, Kartik Audhkhasi, Andrew Rosenberg, Ankur Bapna, Bhuvana Ramabhadran</a> [*Equal Contribution]
-              <br>
-              <br>
-              <strong>Under Review</strong>
-              <br>
-              <p>A systematic evaluation framework designed to assess speech tokenizers comprehensively and shed light on their inherent characteristics, cheaply, without having to train large speech foundation models.</p>
             </td>
           </tr>
 
@@ -170,6 +152,24 @@
             </td>
           </tr>
 
+          <tr height="300px">
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/STAB.png" alt="STAB" width="100%" >
+            </td>
+            <td width="100%" valign="middle">
+              <a href="https://arxiv.org/abs/2409.02384">
+                <papertitle>STAB: Speech Tokenizer Assessment Benchmark</papertitle>
+              </a>
+              <br>
+              Shikhar Vashisht*, <strong>Harman Singh*</strong>, Shikhar Bharadwaj*, Sriram Ganapathy, Chulayuth Asawaroengchai, Kartik Audhkhasi, Andrew Rosenberg, Ankur Bapna, Bhuvana Ramabhadran</a> [*Equal Contribution]
+              <br>
+              <br>
+              <strong>Under Review</strong>
+              <br>
+              <p>A systematic evaluation framework designed to assess speech tokenizers comprehensively and shed light on their inherent characteristics, cheaply, without having to train large speech foundation models.</p>
+            </td>
+          </tr>
+          
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
