--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I am interested in language modeling, long-context capabilities of LLMs and multimodal LMs, reasoning, and post-training. Along with this, I am interested in building inclusive language technologies that can benefit a broader audience.
+                I am interested in language modeling, long-context capabilities of LLMs and multimodal LMs, reasoning, and post-training. Along with this, I am interested in building inclusive language technologies that can benefit a broader range of users.
               </p>
               <p style="color: red;">
                 <strong>I am looking for PhD positions starting Fall 2025</strong>
@@ -169,7 +169,7 @@
               <p>A systematic evaluation framework designed to assess speech tokenizers comprehensively and shed light on their inherent characteristics, cheaply, without having to train large speech foundation models.</p>
             </td>
           </tr>
-          
+
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
