--- a/index.html
+++ b/index.html
@@ -46,16 +46,28 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I am interested in language modeling, long-context capabilities of LLMs and multimodal LMs, reasoning, and post-training. Along with this, I am interested in building inclusive language technologies that can benefit a broader range of users.
+                I am interested in multimodal modeling, reasoning, post-training and long-context capabilities of foundation models. Along with this, I am interested in building inclusive language technologies that can benefit a broader range of users.
               </p>
-              <p style="color: red;">
-                <strong>I am looking for PhD positions starting Fall 2025</strong>
-              </p> 
             </td>
           </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr height="300px">
+            <td style="padding:20px;width:35%;vertical-align:middle">
+              <img src="images/gemma3.png" alt="Gemma" width="100%" >
+            </td>
+            <td width="100%" valign="middle">
+              <a href="https://storage.googleapis.com/deepmind-media/gemma/Gemma3Report.pdf">
+                <papertitle>Gemma 3</papertitle>
+              </a>
+              <br>
+              <strong>Contributor</strong></a>
+              <br>
+              <a href="https://blog.google/technology/developers/gemma-3/">Google Blog</a> | <a href="https://storage.googleapis.com/deepmind-media/gemma/Gemma3Report.pdf">Gemma 3 Technical Report</a>
+            </td>
+          </tr>
 
           <tr height="300px">
             <td style="padding:20px;width:35%;vertical-align:middle">
